tests/ui/allocator/157089-box-pin-in.stderr
error[E0277]: the trait bound `UntrustedAlloc: StaticAllocator` is not satisfied
  --> $DIR/157089-box-pin-in.rs:18:59
   |
LL |     let _: Pin<Box<i32, UntrustedAlloc>> = Box::pin_in(1, UntrustedAlloc);
   |                                            -----------    ^^^^^^^^^^^^^^ unsatisfied trait bound
   |                                            |
   |                                            required by a bound introduced by this call
   |
help: the nightly-only, unstable trait `StaticAllocator` is not implemented for `UntrustedAlloc`
  --> $DIR/157089-box-pin-in.rs:9:1
   |
LL | struct UntrustedAlloc;
   | ^^^^^^^^^^^^^^^^^^^^^
help: the following other types implement trait `StaticAllocator`
  --> $SRC_DIR/std/src/alloc.rs:LL:COL
   |
   = note: `System`
  --> $SRC_DIR/alloc/src/alloc.rs:LL:COL
   |
   = note: `std::alloc::Global`
note: required by a bound in `Box::<T, A>::pin_in`
  --> $SRC_DIR/alloc/src/boxed.rs:LL:COL

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
